--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -293,6 +293,94 @@ select {
 
 
 
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    background-color:#4EA685;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+/* Style the links inside the navbar */
+.navbar a {
+    float: left;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* Add a dark background on top navigation links when the dropdown is active */
+.navbar a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+/* Style the search bar */
+/* Style the search bar */
+.search-container {
+    float: left;
+    margin-right: 20px;
+    display: flex;
+    align-items: center;
+  }
+  
+  .search-container input[type=text] {
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    border-radius: 20px;
+    width: 300px;
+    background-color: #f1f1f1;
+    box-shadow: none;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .search-container input[type=text]:focus {
+    background-color: #fff;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    outline: none;
+  }
+  
+  .search-container button {
+    float: right;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    background-color:  #092106;
+    color: #fff;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .search-container button:hover {
+    background-color: #3e8e41;
+  }
+  
+
+/* Style the change profile button */
+.profile-button {
+    float: right;
+    color: rgb(13, 44, 7);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    cursor: pointer;
+}
+
+.profile-button:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+
+
 /* RESPONSIVE */
 
 @media only screen and (max-width: 425px) {
